# RSZI

./: .gitattributes  .gitignore  README.md
Lab_1/: CMakeLists.txt  CryptoManager.cpp  CryptoManager.h  FileInfo.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  main.cpp
TestFiles/: ProSecureCodeByDaniil.ini
TestFiles/file/pass/: my_token.txt
